--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>FIN-BookManagement</groupId>
   <artifactId>FIN-BookManagement</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
+  <name>FIN-BookManagement Maven Webapp</name>
+  <url>http://maven.apache.org</url>
   <properties>
-    <tomcat.version>8.5.23</tomcat.version>
+    <tomcat.version>9.0.40</tomcat.version>
   </properties>
   <dependencies>
     <dependency>
@@ -35,36 +38,22 @@
     </dependency>
   </dependencies>
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <finalName>embeddedTomcatSample</finalName>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <release>14</release>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.3</version>
-        <configuration>
-          <warSourceDirectory>WebContent</warSourceDirectory>
-          <programs>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>appassembler-maven-plugin</artifactId>
+            <version>2.0.0</version>
+            <configuration>
+                <assembleDirectory>target</assembleDirectory>
+                <programs>
                     <program>
                         <mainClass>launch.Main</mainClass>
                         <name>webapp</name>
                     </program>
                 </programs>
-	</configuration>
-	<executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>assemble</goal>
-                    </goals>
-                </execution>
-            </executions>
-      </plugin>
+            </configuration>
+        </plugin>
     </plugins>
   </build>
 </project>
